<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name1">设备管理系统</string>
    
    <string name="LOGIN_SECURITY_CHECK">http://www.cseicms.com/inspectManagement/j_spring_cas_security_check</string>
    <string name="USER_GETIMF">http://www.cseicms.com/inspectManagement/rs/inspectUser/currentUser</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_activity_stock_in">入库</string>
    <string name="title_activity_stock_out">出库</string>
    <string name="title_activity_install">安装</string>
    <string name="title_activity_uninstall">卸载</string>
    <string name="title_activity_transport">运输</string>
    <string name="title_activity_history">历史</string>
    <string name="stock_in">设备入库</string>
    <string name="stock_out">设备出库</string>
    <string name="install">设备安装</string>
    <string name="uninstall">设备卸载</string>
    <string name="transport">设备运输</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_passwords">请输入密码</string>
    <string name="submit">登录</string>
    <string name="show_passwords">显示密码</string>
    <string name="remember_passwords">记住密码</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_deviceId">扫卡添加设备</string>
    <string name="input_mainDeviceId">扫卡添加主设备</string>
    <string name="add_device">添加</string>
    <string name="save">仅保存</string>
    <string name="upload">保存并上传</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="project_name">设备管理系统</string>
    <string name="logo_name">塔吊机械</string>
    <string name="divider">分割线</string>
    <string name="main_title">设备管理系统</string>
    <string name="history_title">历史记录</string>
    <string name="no_record">没有操作记录</string>
    <string name="select_all">全选</string>
    <string name="edit">编辑</string>
    
    <string name="saoka">扫卡</string>
    <string name="addDevice">添加设备</string>
    <string name="addMainDevice">添加主设备</string>
    <string name="select_store">请选择仓库：</string>
    <string name="select_site">请选择工地：</string>
    <string name="input_driverName">请输入司机姓名</string>
    <string name="input_driverTel">请输入司机号码</string>
    <string name="input_carNum">请输入车牌号</string>
    

</resources>
